# fmod_linking_test

./: Cargo.toml
fmod-sys/: Cargo.toml  LICENSE  README.md  bindings.rs  build.rs  libfmod.so.12  libfmod.so.12.11  libfmodL.so.12  libfmodstudio.so.12  libfmodstudioL.so.12  libfmodstudioL.so.12.11
fmod-sys/src/: lib.rs
src/: main.rs
