[package]
authors = ["jestarray"]
categories = ["external-ffi-bindings", "multimedia::audio"]
description = "Bindgen wrappers around the FMOD Core and Studio libraries"
edition = "2018"
keywords = ["gamedev", "audio", "fmod"]
license-file = "LICENSE"
name = "fmod-sys"
readme = "README.md"
repository = "https://github.com/jestarray/fmod-sys"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
debug = [] # link with the debug dlls instead
default = []
studio = []

[dependencies]

[build-dependencies]
bindgen = "0.56.0"
